reference/gw.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: globalyapp-external-gw
  namespace: globalyapp-web-server
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
