reference/be-http-route.yml
# httproute-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-globaly-app-route
  namespace: globalyapp-web-server
spec:
  parentRefs:
    - name: globalyapp-external-gw
  hostnames:
    - "apistaging.globalyapp.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api-globaly-app-svc
          port: 80
