reference/fe-http-route.yml
# httproute-fe.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fe-globaly-os-route
  namespace: globalyapp-web-server
spec:
  parentRefs:
    - name: globalyapp-external-gw
  hostnames:
    - "prod.globalyapp.com"
    - "www.globalyapp.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fe-globaly-os-svc
          port: 80
